working with image and refactoring badrequests

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -7,14 +7,29 @@
     }
   },
   "AllowedHosts": "*",
-  "frontend_url": "http://localhost:3000",
+  "frontend_url": "https://xxx.azurewebsites.net",
   "connectionStrings": {
-    "defaultConnection": "Data Source=xxx;Initial Catalog=xxx;User Id=xxx;Password=xxx",
-    "AzureStorage": "DefaultEndpointsProtocol=https;AccountName=xxx;AccountKey=xxx;EndpointSuffix=xxx"
+     "defaultConnection": "Data Source=xxx;Initial Catalog=xxx;User Id=xx;Password=xxx",
+    "AzureStorage": "x"
+  },
+  "Blob": {
+    "ConnectionString": "xxx"
   },
   "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=xxx;IngestionEndpoint=https://xxx.xxx.xxx/"
+    "ConnectionString": "xxx"
   },
+  "Mail": {
+    "From": "xxx@gmail.com",
+    "Smtp": "smtp.gmail.com",
+    "Port": 587,
+    "Password": "xxx"
+  },
+  "AuthSettings": {
+    "Key": "xxxx",
+    "Audience": "https://xxx.azurewebsites.net",
+    "Issuer": "https://xxx.azurewebsites.net"
+  },
+  "AppUrl": "https://xxx.azurewebsites.net",
   "keyjwt": "xxx"
 
 }
