--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -7,16 +7,16 @@
     }
   },
   "AllowedHosts": "*",
-  "frontend_url": "https://xxx.azurewebsites.net",
+  "frontend_url": "https://vacunaapi.azurewebsites.net",
   "connectionStrings": {
-     "defaultConnection": "Data Source=xxx;Initial Catalog=xxx;User Id=xx;Password=xxx",
-    "AzureStorage": "x"
+     "defaultConnection": "Data Source=xxx;Initial Catalog=xxxx;User Id=xxx;Password=xxx",
+    "AzureStorage": "DefaultEndpointsProtocol=https;AccountName=xxx;AccountKey=xxx;EndpointSuffix=xx.xx.xx"
   },
   "Blob": {
-    "ConnectionString": "xxx"
+    "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=xxx;AccountKey=xxxx;EndpointSuffix=xxx.xxx.xxx"
   },
   "ApplicationInsights": {
-    "ConnectionString": "xxx"
+    "ConnectionString": "InstrumentationKey=xxxt=xxxx"
   },
   "Mail": {
     "From": "xxx@gmail.com",
@@ -25,11 +25,11 @@
     "Password": "xxx"
   },
   "AuthSettings": {
-    "Key": "xxxx",
-    "Audience": "https://xxx.azurewebsites.net",
-    "Issuer": "https://xxx.azurewebsites.net"
+    "Key": "xxx",
+    "Audience": "https://vacunaapi.azurewebsites.net",
+    "Issuer": "https://vacunaapi.azurewebsites.net"
   },
-  "AppUrl": "https://xxx.azurewebsites.net",
+  "AppUrl": "https://vacunaapi.azurewebsites.net",
   "keyjwt": "xxx"
 
 }
